--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://https://github.com/Natalia2525/goit-js-hw-13-image-finder"
+    "url": "git+https://github.com/Natalia2525/goit-js-hw-13-image-finder"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
